Bug 101169 - Crash when trying to change format of field in a table/query
Summary: Crash when trying to change format of field in a table/query
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-07-28 10:14 UTC by Robert Großkopf
Modified: 2016-10-25 18:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with symbols (9.65 KB, text/plain)
2016-07-29 12:00 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2016-07-28 10:14:39 UTC
Open a Base-document. Open a table or a query. Click with right mouse-button on header of one field. LO crashes immediately.

Tested with
Version: 5.3.0.0.alpha0+
Build ID: d2e4753c3f511cfc6b2932ce60d0bc2e09296f9f
CPU Threads: 4; OS Version: Linux 4.1; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-07-26_17:32:37
Locale: de-DE (de_DE.UTF-8); Calc: group

Also with daily build of 2016-07-20. Same behavior.
Comment 1 Robert Großkopf 2016-07-28 10:18:05 UTC
Couldn't set the importance to major or critical. But for me it's a major buggy behavior ...
Comment 2 Alex Thurgood 2016-07-28 12:37:15 UTC
Tested on 
Version: 5.3.0.0.alpha0+
Build ID: 9fbd201ba8898f29058f9bbc5506ddfd6176cbdf
CPU Threads: 2; OS Version: Mac OS X 10.11.6; UI Render: default; 
Locale: fr-FR (fr.UTF-8); Calc: group

This is my own debug build from 27/07/2016

1) Opened test database (hsqldb embedded)
2) Opened a table
3) Right mouse button click on table column header - no crash
4) Repeated test with query - no crash

So far, no repro for me on OSX
Comment 3 Julien Nabet 2016-07-29 12:00:13 UTC
Created attachment 126466 [details]
bt with symbols

On pc Debian x86-64 with master sources updated today + enable-dbgutil + above all with export SAL_USE_VCLPLUGIN=kde4, I could reproduce this.

I attached a bt with symbols

BTW, I don't reproduce this with gtk3 or gtk2.
Comment 4 Commit Notification 2016-07-29 13:34:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ee79a2dd7ea60e902cab3a9203e307b8a78fee23

Resolves: tdf#101169 crash using column menu in base

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2016-07-29 17:09:22 UTC
With 94165d249e5de53f52ce38140312e341f9fb5cbf, it's ok now (for kde4 + gen rendering which also had the problem)

Thank you Caolán for the quick fix! :-)