Resolves: tdf#101169 crash using column menu in base

Change-Id: Ia4ce895d3562b29db648a7b568121a2867088493